--- a/funny/src/main/AndroidManifest.xml
+++ b/funny/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LittleBox"
         android:usesCleartextTraffic="true">
+
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
@@ -21,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.search.SearchActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
